# soliplex_skills

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  FEEDBACK.md  INSTALL.md  KNOWN_ISSUES.md  LICENSE  PLAN.md.archived  PLAN_ASYNC_DELEGATION.md  PLAN_SKILLS.md  README.md  STATE.md  pyproject.toml
.github/workflows/: ci.yml
example/: README.md  installation.yaml  run_server.py
example/rooms/code-reviewer/: prompt.txt  room_config.yaml
example/rooms/coordinator/: room_config.yaml
example/rooms/darkroom/: room_config.yaml
example/rooms/garden/: room_config.yaml
example/rooms/gpt-120b/: room_config.yaml
example/rooms/gpt-20b/: room_config.yaml
example/rooms/research-assistant/: prompt.txt  room_config.yaml
example/rooms/soliplex-direct/: room_config.yaml
example/rooms/soliplex-http/: room_config.yaml
example/skills/api-deprecation-migrator/: SKILL.md
example/skills/api-deprecation-migrator/resources/: authservice-v1-to-v2.md  migration-pr-template.md
example/skills/code-review/: SKILL.md
example/skills/code-review/resources/: python-style.md
example/skills/math-solver/: SKILL.md
example/skills/math-solver/scripts/: calculate.py
example/skills/medical-bill-negotiator/: SKILL.md
example/skills/medical-bill-negotiator/resources/: common-billing-errors.md  fair-price-resources.md  negotiation-script.md
example/skills/research-assistant/: SKILL.md
example/skills/research-assistant/resources/: citation-formats.md
example/skills/soliplex-api/: SKILL.md
example/skills/soliplex-api/references/: INDEX.md  adapter-patterns.md  ag-ui.md  api-reference.md  architecture.md  auth.md  client-usage.md  config-system.md  design-principles.md  soliplex-skills-example.md
example/skills/soliplex-api/resources/: INDEX.md  adapter-patterns.md  api-reference.md  architecture.md  config-system.md  design-principles.md  soliplex-skills-example.md
example/skills/soliplex-api/scripts/: client.py  soliplex_client.py  test_client.py  test_client_integration.py  validate_resources.py
src/soliplex_skills/: __init__.py  adapter.py  config.py  exceptions.py  tools.py
src/soliplex_skills/introspection/: __init__.py  authz_helper.py  config.py  tools.py
tests/: test_math_skill_integration.py
tests/functional/: __init__.py  conftest.py  test_skills_integration.py  test_soliplex_integration.py
tests/functional/test_skills/calculator/: SKILL.md
tests/functional/test_skills/calculator/resources/: constants.md  formulas.md
tests/functional/test_skills/calculator/scripts/: compute.py
tests/functional/test_skills_alt/greeter/: SKILL.md
tests/functional/test_skills_alt/greeter/resources/: templates.md
tests/unit/: conftest.py  test_adapter.py  test_config.py  test_exceptions.py  test_introspection.py  test_tools.py
