[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "soliplex-skills"
version = "0.3.0"
description = "Soliplex adapter for pydantic-ai-skills"
authors = [{ name = "runyaga", email = "runyaga@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    # Upstream library
    "pydantic-ai-skills >= 0.4.0",
    # Core dependencies
    "pydantic >= 2.0.0",
    "pydantic-settings >= 2.0.0",
    "pydantic-ai >= 0.5.0",
]

[project.optional-dependencies]
soliplex = ["soliplex @ git+https://github.com/soliplex/soliplex.git@main"]

[dependency-groups]
dev = [
    "pytest >= 8.0.0",
    "pytest-cov >= 4.0.0",
    "pytest-asyncio >= 0.23.0",
    "coverage >= 7.0.0",
    "ruff >= 0.4.0",
    "soliplex @ git+https://github.com/soliplex/soliplex.git@main",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = "src"
python_files = "test_*.py"
testpaths = ["tests/unit", "tests/functional", "tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = "--cov=soliplex_skills --cov-branch --cov-fail-under=90"
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.coverage.run]
source = ["src/soliplex_skills"]
omit = ["src/soliplex_skills/introspection/*"]

[tool.coverage.report]
show_missing = true

[tool.ruff]
line-length = 79
target-version = "py312"

[tool.ruff.lint]
select = ["F", "E", "B", "UP", "I", "TRY", "PT", "SIM", "RUF"]

[tool.ruff.lint.isort]
force-single-line = true
